Open routes than dont need token and user authentication
